[project]
name = "instabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "diffusers>=0.33.1",
    "ffmpeg-python>=0.2.0",
    "huggingface-hub>=0.30.2",
    "kokoro>=0.9.4",
    "langchain-ollama>=0.3.1",
    "optimum>=1.24.0",
    "pillow>=11.2.1",
    "pip>=25.0.1",
    "protobuf>=6.30.2",
    "requests>=2.32.3",
    "sentencepiece>=0.2.0",
    "smpy>=1.0.3",
    "soundfile>=0.13.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]
